src/test/deca/syntax/parser/valid/multiple_multiplications.deca
// Two following multiplications

{
  int x = 1 * 2 * 3;
}
