src/test/deca/syntax/parser/invalid/decl_var_type_type.deca
// Type defined to times

{
    int int x;
}